[package]
name = "dom-test-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"], optional = true }
leptos_dom = { version = "0.7", optional = true }
wasm-bindgen = { version = "=0.2.100" }
web-sys = { version = "0.3", features = ["EventInit", "NodeList"] }
wasm-bindgen-test = { version = "0.3" }
gloo-timers = { version = "0.3", features = ["futures"] }
extend = { version = "1" }
paste = { version = "1" }

[features]
leptos = ["dep:leptos", "dep:leptos_dom"]
