[package]
name = "dom-test-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"], optional = true }
leptos_dom = { version = "0.7", optional = true }
wasm-bindgen = { version = "=0.2.100" }
web-sys = { version = "0.3", features = [
  "EventInit",
  "NodeList",
  "HtmlElement",
] }
wasm-bindgen-test = { version = "0.3" }
extend = { version = "1" }
paste = { version = "1" }
cfg-if = { version = "1" }

[dev-dependencies]
# XXX: actually I don't think I use it at all, just for marking some tests for a hacky workaround for
# wasm-bindgen-test
tokio = { version = "1", features = ["full"] }

[features]
leptos = ["dep:leptos", "dep:leptos_dom"]
